<resources>
    <string name="app_name">GUI_Menu_to_Unity</string>
    <string name="edit_message">Setting Tester</string>
    <string name="button_send">Start the Application</string>
    <string name="settings">Settings</string>
    <string name="list_title">Setting 1</string>
    <string name="list_summary">This is a selection of values</string>
    <string name="voicemail_settings">Setting 2</string>
    <string name="voicemail_ringtone_title">Hey Look Ringtones</string>
    <string name="pref_sync_sum">Buttons Can have Descriptions</string>
    <string name="pref_sync">Setting for a button T/F</string>
    <string name="pref_sync_summ">Summary / Explanation of a button</string>
    <string name="list1">value 1</string>
    <string name="list2">value 2</string>
    <string name="list3">value 3</string>
    <string name="list4">value 4</string>
</resources>
